Monkslab - box:hover button

--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -289,9 +289,8 @@
         class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Nejbližší akce</h2>
       </div>
-
-      <a href="" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="box box--grey mdc-layout-grid__inner">
+      <div class="box_btn imghov mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="box box--grey btn-hover mdc-layout-grid__inner">
           <div
             class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -311,11 +310,13 @@
               funguje. Dozvíš se, co všechno v Monks Labu vyrobit jde a co naopak nejde. Registruj se na Meetupu.
               Registrace je zdarma.</p>
           </div>
-        </div>
-      </a>
 
-      <a href="" class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <div class="box box--grey mdc-layout-grid__inner">
+        </div>
+        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="" class="btn btn-outline-light">Registrujte se</a></div>
+      </div>
+
+      <div href="" class="box_btn imghov mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
+        <div class="box box--grey btn-hover mdc-layout-grid__inner">
           <div
             class="event_icon mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
             <svg width="104" height="104" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -337,7 +338,8 @@
               zdarma.</p>
           </div>
         </div>
-      </a>
+        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="" class="btn btn-outline-light">Registrujte se</a></div>
+      </div>
 
 
     </div>
