--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -315,7 +315,7 @@
 </body>
 <footer>
   <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-    <iframe
+    <iframe title="Monkslab location via Google Maps"
       src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2562.188242491491!2d14.489150315245652!3d50.045304879421586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x470b93b46cc7ec9b%3A0x39c7c65b1184183b!2sTopMonks!5e0!3m2!1scs!2scz!4v1566838990273!5m2!1scs!2scz"
       width="100%" height="400" frameborder="0" style="border:0;" allowfullscreen="yes"></iframe>
   </div>
