Kratsi uvod pro bezpecnostni audit

--- a/www.topmonks.cz/src/html/bezpecnostni-audit/index.html
+++ b/www.topmonks.cz/src/html/bezpecnostni-audit/index.html
@@ -30,12 +30,13 @@
           <h1>analýza bezpečnostních opatření webu</h1>
           <h2>Bezpečnostní audit webu</h2>
           <p><span class="purple">Vyšší důvěra zákazníka znamená vyšší konverzní poměr vašeho
-            produktu.</span> Bezpečnostní audit je analýza stávajících bezpečnostních
-            opatření webu, možných útočných vektorů, bezpečnostních rizik a jejich
-            dopadu na váš byznys. Analýza odhalí, jak bezpečně a důvěryhodně
-            působí web na zákazníka a zda web netrpí zranitelnostmi, kterým lze
-            předejít. Součástí auditu je návrh vhodných opatření pro zvýšení
-            bezpečnosti i&nbsp;důvěryhodnos&shy;ti&nbsp;webu.</p>
+            produktu.</span>
+            Uživatelé potřebují bezpečný a důvěryhodný web, aby vám svěřili peníze nebo citlivé údaje.
+            Je-li to zajištěno dobře, máte konkurenční výhodu, v opačném případě hrozí ztráta důvěry.
+            Bezpečnostní audit je analýza rizik webu a jejich dopadu na váš byznys.
+            Odhalí, jak bezpečně a důvěryhodně působí web na zákazníka, a zda netrpí zranitelnostmi, kterým lze předejít.
+            Součástí auditu je návrh vhodných opatření.
+          </p>
         </div>
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         </div>
