--- a/monkslab.cz/src/html/clenstvi/index.html
+++ b/monkslab.cz/src/html/clenstvi/index.html
@@ -307,12 +307,12 @@
             class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-9-desktop">
             <h3>Monks Lab přehlídka</h3>
             <p>Přijď se podívat, jak to u nás vypadá a chodí. Ukážeme ti, co všechno v dílně máme a jak to u nás
-              funguje. Dozvíš se, co všechno v Monks Labu vyrobit jde a co naopak nejde. Registruj se na Meetupu.
+              funguje. Dozvíš se, co všechno v Monks Labu vyrobit jde a co naopak nejde. Registruj se na Facebooku.
               Registrace je zdarma.</p>
           </div>
 
         </div>
-        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="" class="btn btn-outline-light">Registrujte se</a></div>
+        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="https://www.facebook.com/events/342549326472239/" class="btn btn-outline-light">Registrujte se</a></div>
       </div>
 
       <div href="" class="box_btn imghov mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -334,11 +334,11 @@
             <h3>Hands-on test první elektronické dýmky na světe</h3>
             <p>V Monks Labu se vyrábí takový unikát, jako je první elektronická dýmka na světě. A ty máš tu možnost
               vidět nejen to, jak se vyrábí, ale také ji společně s námi testovat. Přijď ochutnat a popovídat si o
-              všem technickém i netechnickém u šálku čaje. A dýmky samozřejmě. Registruj se na Meetupu. Registrace je
+              všem technickém i netechnickém u šálku čaje. A dýmky samozřejmě. Registruj se na Facebooku. Registrace je
               zdarma.</p>
           </div>
         </div>
-        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="" class="btn btn-outline-light">Registrujte se</a></div>
+        <div class="overlay ctr mdc-layout-grid__cell mdc-layout-grid__cell--span-12"><a href="https://www.facebook.com/events/380219589543228/" class="btn btn-outline-light">Registrujte se</a></div>
       </div>
 
 
