Update menu a description

--- a/monkslab.cz/src/html/index.html
+++ b/monkslab.cz/src/html/index.html
@@ -6,8 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta http-equiv="Accept-CH" content="DPR,Viewport-Width,Width">
   <meta name="viewport" content="width=device-width,initial-scale=1,viewport-fit=cover">
-  <meta name="description" content="Monks Lab je otvorený kreatívny priestor pre domácich kutilov, kreatívcov
-          a študentov">
+  <meta name="description" content="Monks Lab je otevřený kreativní prostor, který umožňuje kutilům všeho druhu, kreativcům a studenům navrhovat a realizovat jejich nápady.">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://monkslab.cz/">
   <link rel="stylesheet" href="/stylesheets/main.css">
@@ -70,7 +69,7 @@
           <ul class="menu__list">
             <li class=""><a href="/clenstvi">Členství</a></li>
             <li class=""><a href="/clenstvi#events">Akce</a></li>
-            <li class=""><a href="">Wiki</a></li>
+            <li class=""><a href="https://github.com/topmonks/monkslab/wiki/Monks-Lab---Sd%C3%ADlen%C3%A1-d%C3%ADlna-v-Praze-od-TopMonks">Wiki</a></li>
             <li class=""><a href="/kontakt">Kontakt</a></li>
           </ul>
         </nav>
