Oprava Caffe.tm

--- a/caffe.topmonks.cz/src/html/index.html
+++ b/caffe.topmonks.cz/src/html/index.html
@@ -293,10 +293,7 @@
               <h3>Kde?</h3>
               <span>{{ upcomingEvent.address | safe }}</span>
             </div>
-            <div class=" mdc-layout-grid__cell">
-              {% for i in range(eventsCount -1, 0, -1) -%}
-                {{ eventInfo(eventsList[i].value, posters) }}
-              {%- endfor %}
+            <div class="poster mdc-layout-grid__cell">
             </div>
           </div>
         </div>
