Blockchain - změna názvu videí

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -334,10 +334,8 @@
           <p class="perex">During the weekend of 19.-21.7.&nbsp;Paralelni Polis in Prague hosted its first
             hackathon. The 48-hour event fuelled by free beer and Red Bull welcomed around
             30&nbsp;participants from around the&nbsp;world.</p>
-          <a href="https://www.youtube.com/watch?v=zLmn1c-PL2Y" title="Flying Circuit Video">Hackatoshi's Flying Circuit
-            - Teaser (Part 1)</a><br>
-          <a href="https://www.youtube.com/watch?v=_rriiaALnn4" title="Flying Circuit Video">Hackatoshi's Flying Circuit
-            - Teaser (Part 2)</a>
+          <a href="https://www.youtube.com/watch?v=zLmn1c-PL2Y" title="Flying Circuit Video">Hackatoshi's Flying Circuit | @exiledsurfer on early years in Bitcoin</a><br>
+          <a href="https://www.youtube.com/watch?v=_rriiaALnn4" title="Flying Circuit Video">Hackatoshi's Flying Circuit | @extropyLaurence on Enterprise Blockchain</a>
           <hr>
           <div class="mdc-layout-grid__inner">
             <div
