Update textov na kontakte

--- a/monkslab.cz/src/html/kontakt/index.html
+++ b/monkslab.cz/src/html/kontakt/index.html
@@ -130,6 +130,17 @@
       </div>
       <div
         class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+        <img alt="[foto] Tomáš Paulus" src="https://insight.topmonks.com/avatar/tomas-paulus"
+             onerror="this.onerror=null,this.src=&quot;/images/monk_logo-c877778634.png&quot;">
+        <h3>Zavolat a napsat můžeš Tomovi</h3>
+        <p>Kutil Tom se u nás stará o chod Monks Labu a má největší přehled o tom, co se v Labu zrovna děje. I na sebevíce filozofickou otázku ohledně Monks Labu ti Tom rád odpoví.</p>
+        <p>
+          <a itemprop="email" href="mailto:tommonkslab.cz">tom&#64;monkslab.cz</a><br>
+          <a itemprop="telephone" href="tel:+420608026645">+420&nbsp;608&nbsp;026&nbsp;645</a>
+        </p>
+      </div>
+      <div
+        class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
         <svg width="64" height="64" viewBox="0 0 104 104" fill="none" xmlns="http://www.w3.org/2000/svg">
           <title>Ikona Domečku se srdíčkem - pro text o Monkslab přehlídce</title>
           <path
@@ -140,7 +151,7 @@
             fill="black"/>
         </svg>
         <h3>Stavte sa u&nbsp;nás</h3>
-        <p>Blahblah otváracia doba je iná pre každú úroveň členstva, <a href="/clenstvi" style="text-decoration: none; color: var(--ml-purple)">viac zistíš na stránke členstva.</a></p>
+        <p>Každou středu od 17:30 do 20:30 může do Monks Labu zaskočit kdokoli. Noví zájemci, zvědavci, kreativci i čumilové. Jsme tu zkrátka pro všechny. Další časy, kdy se do Monks Labu můžeš podívat se odvíjí od <a href="/clenstvi" style="color: var(--ml-purple)">úrovně tvého členství</a>.</p>
         <a href="https://g.page/topmonks?share" rev="Adresa na Google Maps">
           <div class="location" itemprop="location" itemscope="" itemtype="https://schema.org/Place">
             <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress"><span
@@ -154,19 +165,7 @@
           </div>
         </a>
       </div>
-      <div
-        class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <img alt="[foto] Tomáš Paulus" src="https://insight.topmonks.com/avatar/tomas-paulus"
-             onerror="this.onerror=null,this.src=&quot;/images/monk_logo-c877778634.png&quot;">
-        <h3>Zavolajte nebo napište Tomovi</h3>
-        <p>Tom sa u&nbsp;nás stará o&nbsp;chod Monks Labu a má najväčší prehľad o&nbsp;tom,
-          čo sa v&nbsp;Labe deje. Ozvite sa mu ak máte otázky, na ktoré ste nenašli
-          odpoveď.</p>
-        <p>
-          <a itemprop="email" href="mailto:tommonkslab.cz">tom&#64;monkslab.cz</a><br>
-          <a itemprop="telephone" href="tel:+420608026645">+420&nbsp;608&nbsp;026&nbsp;645</a>
-        </p>
-      </div>
+
     </div>
   </div>
 </section>
