Update nového kaféčka

--- a/www.topmonks.cz/src/html/potkejte-nas/index.html
+++ b/www.topmonks.cz/src/html/potkejte-nas/index.html
@@ -33,7 +33,7 @@
         <div
           class="tm-meetup__cell tm-events_text mdc-layout-grid__cell mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <h3>TopMonks Caffè</h3>
-          <p>Každý první čtvrtek v&nbsp;měsíci pořádáme pravidelný meetup o&nbsp;všem,
+          <p>Každé první úterý v&nbsp;měsíci pořádáme pravidelný meetup o&nbsp;všem,
             co nás zajímá.  IT témata občas proložíme soft prezentacemi např.
             o&nbsp;cestování nebo decentralizaci.</p>
 
