--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -334,8 +334,6 @@
           <p class="perex">During the weekend of 19.-21.7.&nbsp;Paralelni Polis in Prague hosted its first
             hackathon. The 48-hour event fuelled by free beer and Red Bull welcomed around
             30&nbsp;participants from around the&nbsp;world.</p>
-          <a href="https://www.youtube.com/watch?v=zLmn1c-PL2Y" title="Flying Circuit Video">Hackatoshi's Flying Circuit | @exiledsurfer on early years in Bitcoin</a><br>
-          <a href="https://www.youtube.com/watch?v=_rriiaALnn4" title="Flying Circuit Video">Hackatoshi's Flying Circuit | @extropyLaurence on Enterprise Blockchain</a>
           <hr>
           <div class="mdc-layout-grid__inner">
             <div
@@ -347,6 +345,50 @@
             <div
               class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
               <a href="https://hackernoon.com/report-from-the-hackatoshis-flying-circuit-v51kc3vl6">Show article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">13.08.2019 / </span> <a type="media_type"
+                                                                  href="https://www.youtube.com/watch?v=zLmn1c-PL2Y">Youtube.com</a>
+          </p>
+          <h3>Hackatoshi's Flying Circuit | @exiledsurfer on early years in Bitcoin</h3>
+          <p class="perex">@KryptoJoseph sat down with @exiledsurfer to discuss Bitcoin early years and reflections on 10 years in the industry. Exiledsurfer worked for the Bitcoin foundation in 2013-2015, currently contributes to Trustlines Network.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
+                   height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div
+              class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.youtube.com/watch?v=zLmn1c-PL2Y">Show article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">13.08.2019 / </span> <a type="media_type"
+                                                                  href="https://www.youtube.com/watch?v=_rriiaALnn4">Youtube.com</a>
+          </p>
+          <h3>Hackatoshi's Flying Circuit | @extropyLaurence on Enterprise Blockchain</h3>
+          <p class="perex">@KryptoJoseph sat down with @extropyLaurence to discuss enterprise blockchain projects, putting Ethereum node in a Porsche and differences between Czech and UK crypto communities.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
+                   height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div
+              class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://www.youtube.com/watch?v=_rriiaALnn4">Show article</a>
             </div>
           </div>
         </div>
