--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -302,6 +302,33 @@
         </div>
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">16.09.2019 / </span> <a type="media_type"
+                                                                  href="https://hackernoon.com">Hackernoon.com</a>
+          </p>
+          <h3>Interview with Rene Reinsberg, founder of Celo</h3>
+          <p class="perex">During dAppcon, a recent conference in Berlin, I&nbsp;had a chance to talk to
+            Rene Reinsberg, founder of&nbsp;Celo.<br>
+            Celo (meaning “purpose” in esperanto) is a VC-backed project aiming to
+            bring financial services to the unbanked through its own smart contract platform
+            (Celo is a fork of Ethereum).</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
+                   height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div
+              class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://hackernoon.com/interview-with-rene-reinsberg-founder-of-celo-lv2zi3un5">Show
+                article</a>
+            </div>
+          </div>
+        </div>
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">20.08.2019 / </span> <a type="media_type"
                                                                   href="https://hackernoon.com">Hackernoon.com</a>
           </p>
@@ -416,6 +443,8 @@
             </div>
           </div>
         </div>
+        <div id="more" class="more mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__inner">
+
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.penize.cz/">Penize.cz</a>
@@ -437,7 +466,6 @@
           </div>
         </div>
 
-        <div id="more" class="more mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__inner">
 
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
