--- a/www.topmonks.com/src/static/team/index.html
+++ b/www.topmonks.com/src/static/team/index.html
@@ -1,1 +1,11 @@
-<!DOCTYPE html><html><head><meta charset=utf-8><meta name=robots content=noindex><meta http-equiv=refresh content="0;url=/about-us/#team"><link rel=canonical href=/about-us/#team ><script>window.location.replace('/about-us/#team');</script></head><body>This page has been moved to <a href=/about-us/#team >/about-us/#team</a></body></html>
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset=utf-8>
+  <meta name=robots content=noindex>
+  <meta http-equiv=refresh content="0;url=/about-us/#team">
+  <link rel=canonical href=/about-us/#team>
+  <script>window.location.replace("/about-us/#team");</script>
+</head>
+<body>This page has been moved to <a href=/about-us/#team>/about-us/#team</a></body>
+</html>
