[topmonks.cz] fixed Lumir picture URL

--- a/www.topmonks.cz/src/html/tym/index.html
+++ b/www.topmonks.cz/src/html/tym/index.html
@@ -29,23 +29,22 @@
         {{ macros.teamMember(members['jiri-fabian'], true) }}
         {{ macros.teamMember(members['jirka-jansa'], true) }}
         {{ macros.teamMember(members['ales-roubicek'], true) }}
-        {{ macros.teamMember(members['tomas-paulus'], true) }}
-        {{ macros.teamMember(members['jiri-penzes'], true) }}
         <div
-          class="box mdc-layout-grid__cell tm-team__member mdc-layout-grid__cell--span-4-desktop tm-team__member--hero">
+          class="box mdc-layout-grid__cell tm-team__member mdc-layout-grid__cell--span-3-desktop tm-team__member--hero">
           <img alt="[photo] Lumír Mrkva" loading="lazy"
-               src="https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_auto,f_auto/v1569583487/lumír-mrkva.jpg"
-               srcset="https://res.cloudinary.com/topmonks/image/upload//w_450,dpr_auto,f_auto/v1569583487/lumír-mrkva.jpg,
-               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_1.5,f_auto/v1569583487/lumír-mrkva.jpg 1.5x,
-               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_2,f_auto/v1569583487/lumír-mrkva.jpg 2x,
-               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_3,f_auto/v1569583487/lumír-mrkva.jpg 3x"
+               src="https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_auto,f_auto/v1569583487/avatar/mrkva-lumir.jpg"
+               srcset="https://res.cloudinary.com/topmonks/image/upload//w_450,dpr_auto,f_auto/v1569583487/avatar/mrkva-lumir.jpg,
+               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_1.5,f_auto/v1569583487/avatar/mrkva-lumir.jpg 1.5x,
+               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_2,f_auto/v1569583487/avatar/mrkva-lumir.jpg 2x,
+               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_3,f_auto/v1569583487/avatar/mrkva-lumir.jpg 3x"
                onerror="this.onerror=null,this.src=&quot;/assets/img/monk_logo.png&quot;" width="450" height="450">
           <div class="content"><strong>Lumír Mrkva</strong>
             <span>Team leader</span></div>
         </div>
+        {{ macros.teamMember(members['tomas-paulus'], true) }}
+        {{ macros.teamMember(members['jiri-penzes'], true) }}
         {{ macros.teamMember(members['pavol-noha'], true) }}
         {{ macros.teamMember(members['veronika-tomasova'], true) }}
-        {{ macros.teamMember(members['simona-zabrzova'], true) }}
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <div class="mdc-layout-grid tm-team__members">
             <div class="mdc-layout-grid__inner">
