Removed broken links from www.hlidacshopu.cz

--- a/www.hlidacshopu.cz/src/html/index.html
+++ b/www.hlidacshopu.cz/src/html/index.html
@@ -104,12 +104,7 @@
         class="app-bar_menu mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-6-desktop">
         <nav id="navigation" class="menu">
           <ul class="menu__list">
-            <li class=""><a href="/clenstvi">Členství</a></li>
-            <li class=""><a href="/clenstvi#events">Akce</a></li>
-            <li class=""><a
-                href="https://github.com/topmonks/monkslab/wiki/Monks-Lab---Sd%C3%ADlen%C3%A1-d%C3%ADlna-v-Praze-od-TopMonks">Wiki</a>
-            </li>
-            <li class=""><a href="/kontakt">Kontakt</a></li>
+
           </ul>
         </nav>
       </div>
@@ -1107,20 +1102,20 @@
             </clipPath>
           </defs>
         </svg>
-        <p class="sub-info--grey">DataOps & Automation</p>
+        <p class="sub-info--grey">DataOps &amp; Automation</p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <hr class="layout-wrapper">
       </div>
 
       <div class="company mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-        <span>© 2019, TopMonks, Apify, Keboola</span>
+        <span>© 2019 TopMonks, Apify, Keboola</span>
       </div>
       <div class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-4-desktop">
-        <span>Terms & Conditions</span>
+        <a href="">Terms &amp; Conditions</a>
       </div>
       <div class="terms mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet mdc-layout-grid__cell--span-2-desktop">
-        <span>Privacy</span>
+        <a href="">Privacy</a>
       </div>
       </div>
   </div>
