Simona Zabrzkova - deleted member

--- a/www.topmonks.cz/src/html/digitalni-audit/index.html
+++ b/www.topmonks.cz/src/html/digitalni-audit/index.html
@@ -212,7 +212,7 @@
         </div>
         <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <a class="action-button advicing_btn jumbotron__cta"
-             href="https://calendly.com/simona-zabrzova/nezavazna-schuzka">OBJEDNEJTE
+             href="mailto:sales@​topmonks.com">OBJEDNEJTE
             SI NEZÁVAZNOU KONZULTACI</a>
         </div>
       </div>
@@ -272,7 +272,7 @@
       </div>
       <div class="button mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <a class="action-button advicing_btn jumbotron__cta"
-           href="https://calendly.com/simona-zabrzova/nezavazna-schuzka">OBJEDNEJTE
+           href="mailto:sales@​topmonks.com">OBJEDNEJTE
           SI NEZÁVAZNOU KONZULTACI</a>
       </div>
     </div>
@@ -349,27 +349,7 @@ Po několika úpravách webu "předními odborníky" jsme se i s tímto požadav
       <p>Zanalyzujeme stav vašeho IT, doporučíme další kroky a po vašem schválení jednotlivé kroky implementujeme.</p>
     </div>
     <div
-      class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-      itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-      <h3><b>Konzultace v&nbsp;retailu a ecommerce</b></h3>
-      <p class="box_text-about">Know-How v&nbsp;oblasti retail a ecommerce nejlépe prodiskutujete se
-        Simonou.</p>
-      <div class="mdc-layout-grid__inner">
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-          <img alt="[foto] Simona Zábržová"
-               src="https://res.cloudinary.com/topmonks/image/upload/v1563262501/avatars/simona-zabrzova_zsr1ad.png"
-               onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
-        </div>
-        <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-          <p><span itemprop="name">Simona Zábržová</span><br/>
-            <a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
-            <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
-          </p>
-        </div>
-      </div>
-    </div>
-    <div
-      class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
+      class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
       itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
       <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
       <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
