--- a/www.topmonks.cz/src/html/tym/index.html
+++ b/www.topmonks.cz/src/html/tym/index.html
@@ -35,6 +35,7 @@
                src="https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_auto,f_auto/v1569583487/avatar/mrkva-lumir.jpg"
                srcset="https://res.cloudinary.com/topmonks/image/upload//w_450,dpr_auto,f_auto/v1569583487/avatar/mrkva-lumir.jpg,
                https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_1.5,f_auto/v1569583487/avatar/mrkva-lumir.jpg 1.5x,
+               https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_1.5,f_auto/v1569583487/avatar/mrkva-lumir.jpg 1.5x,
                https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_2,f_auto/v1569583487/avatar/mrkva-lumir.jpg 2x,
                https://res.cloudinary.com/topmonks/image/upload/w_450,dpr_3,f_auto/v1569583487/avatar/mrkva-lumir.jpg 3x"
                onerror="this.onerror=null,this.src=&quot;/assets/img/monk_logo.png&quot;" width="450" height="450">
@@ -123,27 +124,7 @@
         <p>Zanalyzujeme stav vašeho IT, doporučíme další kroky a po vašem schválení jednotlivé kroky implementujeme.</p>
       </div>
       <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Konzultace v&nbsp;retailu a ecommerce</b></h3>
-        <p class="box_text-about">Know-How v&nbsp;oblasti retail a ecommerce nejlépe prodiskutujete se
-          Simonou.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Simona Zábržová"
-                 src="https://res.cloudinary.com/topmonks/image/upload/v1563262501/avatars/simona-zabrzova_zsr1ad.png"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
-          </div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Simona Zábržová</span><br/>
-              <a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
-              <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
+        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
         <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
