--- a/www.topmonks.cz/src/html/kontakt/index.html
+++ b/www.topmonks.cz/src/html/kontakt/index.html
@@ -58,6 +58,7 @@
   }
 
   .box-member {
+    margin: 0 auto;
     padding: 10px 28px;
   }
 
@@ -154,7 +155,7 @@
 {% endblock %}
 
 {% block content %}
-<div itemscope itemtype="https://schema.org/Organization">
+  <div itemscope itemtype="https://schema.org/Organization">
   <section class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="page_sub-title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
@@ -164,26 +165,7 @@
           s&nbsp;vámi domluvíme nezávaznou schůzku.</p>
       </div>
       <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
-        itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
-        <h3><b>Konzultace v&nbsp;retailu a ecommerce</b></h3>
-        <p class="box_text-about">Know-How v&nbsp;oblasti retail a ecommerce nejlépe prodiskutujete se
-          Simonou.</p>
-        <div class="mdc-layout-grid__inner">
-          <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
-            <img alt="[foto] Simona Zábržová" src="https://res.cloudinary.com/topmonks/image/upload/v1563262501/avatars/simona-zabrzova_zsr1ad.png"
-                 onerror="this.onerror=null; this.src='/images/monk_logo-c877778634.png'" width="112" height="112">
-          </div>
-          <div class="box_member-contact mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
-            <p><span itemprop="name">Simona Zábržová</span><br/>
-              <a itemprop="telephone" href="tel:+420777285544">+420 777 285 544</a><br>
-              <a itemprop="email" href="mailto:simona.zabrzova&#64;topmonks.com">simona.zabrzova@​topmonks.com</a></p>
-            </p>
-          </div>
-        </div>
-      </div>
-      <div
-        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop"
+        class="box box-member mdc-layout-grid__cell mdc-layout-grid__cell--span-12"
         itemprop="employee" itemscope="" itemtype="https://schema.org/Person">
         <h3><b>Konzultace v&nbsp;retailu a fintechu</b></h3>
         <p class="box_text-about">Know-how v&nbsp;oblasti retailu a fintechu nejlépe proberete s&nbsp;Ondrou.</p>
