--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -303,7 +303,7 @@
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">16.09.2019 / </span> <a type="media_type"
-                                                                  href="https://hackernoon.com">Hackernoon.com</a>
+                                                                  href="https://hackernoon.com/interview-with-rene-reinsberg-founder-of-celo-lv2zi3un5">Hackernoon.com</a>
           </p>
           <h3>Interview with Rene Reinsberg, founder of Celo</h3>
           <p class="perex">During dAppcon, a recent conference in Berlin, I&nbsp;had a chance to talk to
@@ -330,7 +330,7 @@
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">20.08.2019 / </span> <a type="media_type"
-                                                                  href="https://hackernoon.com">Hackernoon.com</a>
+                                                                  href="https://hackernoon.com/how-much-should-bitcoin-miners-earn-in-the-future-undy3vih">Hackernoon.com</a>
           </p>
           <h3>Bitcoin’s&nbsp;Security Budget is Adequate</h3>
           <p class="perex">„In a few decades when the reward gets too small, the transaction fee will
@@ -355,7 +355,7 @@
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">13.08.2019 / </span> <a type="media_type"
-                                                                  href="https://hackernoon.com">Hackernoon.com</a>
+                                                                  href="https://hackernoon.com/report-from-the-hackatoshis-flying-circuit-v51kc3vl6">Hackernoon.com</a>
           </p>
           <h3>Report from the Hackatoshi’s&nbsp;Flying Circuit</h3>
           <p class="perex">During the weekend of 19.-21.7.&nbsp;Paralelni Polis in Prague hosted its first
@@ -423,7 +423,7 @@
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">12.08.2019 / </span> <a type="media_type"
-                                                                  href="https://hackernoon.com">Hackernoon.com</a>
+                                                                  href="https://hackernoon.com/libra-the-ideavirus-9u653vi0">Hackernoon.com</a>
           </p>
           <h3>Libra: The Idea-virus</h3>
           <p class="perex">The lid on the fabled "Facebook coin" project has been finally lifted in the middle of
@@ -447,7 +447,7 @@
 
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.penize.cz/">Penize.cz</a>
+          <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.alza.cz/libra-facebook">Penize.cz</a>
           </p>
           <h3>Libra očima expertů: Udělá facebooková měna díru do&nbsp;světa?</h3>
           <p class="perex">Facebook (který má jen o&nbsp;trochu míň obyvatel než Čína a Indie
@@ -469,7 +469,7 @@
 
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <p><span class="published-date">3.5.2019 /</span> <a type="media_type" href="https://ihned.cz/">Ihned.cz</a>
+            <p><span class="published-date">3.5.2019 /</span> <a type="media_type" href="https://ego.ihned.cz/c1-66565070-v-byznysu-jsem-dospel-k-taoismu-chaos-se-nesnazim-zkrotit-rika-jiri-fabian-spolumajitel-startupoveho-studia-topmonks">Ihned.cz</a>
             </p>
             <h3>V&nbsp;byznysu jsem dospěl k&nbsp;taoismu, chaos se nesnažím zkrotit…</h3>
             <p class="perex">Pracoval pro start-upy, český podnik i&nbsp;korporaci. Založil vlastní firmu,
@@ -494,7 +494,7 @@
 
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.startupjobs.cz/">Startupjobs.cz</a>
+            <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.startupjobs.cz/newsroom/lea-petrasova-topmonks-organizujeme-se-sami">Startupjobs.cz</a>
             </p>
             <h3>Lea Petrášová z&nbsp;TopMonks o&nbsp;decentralizaci firem a zvládání svobody ve
               fluidních…</h3>
@@ -520,7 +520,7 @@
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <p><span class="published-date">30.4.2019 / </span> <a type="media_type"
-                                                                   href="https://btctip.cz">Btctip.cz</a>
+                                                                   href="https://btctip.cz/naucte-se-pracovat-s-bitcoinovymi-poplatky/">Btctip.cz</a>
             </p>
             <h3>Naučte se pracovat s&nbsp;bitcoinovými poplatky...</h3>
             <p class="perex">Transakční poplatky spojené s&nbsp;bitcoinovými transakcemi již dávno
@@ -544,56 +544,8 @@
 
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <p>
-              <span class="published-date">1.1.2019 / </span>
-              <a type="media_type" href="https://www.alza.cz/">Alza.cz</a>
-            </p>
-            <h3>ICO. Co je prvotní nabídka kryptoměny?</h3>
-            <p class="perex">Prvotní nabídky kryptoměnových tokenů, tzv. ICO, se během posledních
-              let staly velice populárními. Nový fenomén skrývá jak potenciální
-              poklady s&nbsp;možností obrovských zisků, tak i&nbsp;velké nástrahy pro
-              investory.</p>
-            <hr>
-            <div class="mdc-layout-grid__inner">
-              <div
-                class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
-                     height="32">
-                <span class="name">Josef Tětek</span>
-              </div>
-              <div
-                class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                <a href="https://www.alza.cz/ico-initial-coin-offerings">Show article</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <p><span class="published-date">20.4.2018 / </span> <a type="media_type"
-                                                                   href="https://www.alza.cz/">Alza.cz</a>
-            </p>
-            <h3>Kryptoměnové forky</h3>
-            <p class="perex">Jaký je rozdíl mezi hard a soft forkem? Co dělat a co nedělat při
-              kryptoměnovém forku? Hlubší článek rozebírající různé typy štěpení
-              blockchainu.</p>
-            <hr>
-            <div class="mdc-layout-grid__inner">
-              <div
-                class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
-                     height="32">
-                <span class="name">Josef Tětek</span>
-              </div>
-              <div
-                class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-                <a href="https://www.alza.cz/kryptomenove-forky">Show article</a>
-              </div>
-            </div>
-          </div>
-          <div
-            class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
             <p><span class="published-date">13.2.2018 / </span> <a type="media_type"
-                                                                   href="https://btctip.cz">Btctip.cz</a>
+                                                                   href="https://btctip.cz/dao-a-daico-teorie-a-praxe-chytrych-kontraktu/">Btctip.cz</a>
             </p>
             <h3>DAO a DAICO&nbsp;&ndash; teorie a praxe chytrých kontraktů</h3>
             <p class="perex">Historie smart contractů a jejich první reálné testování v&nbsp;nechvalně
@@ -616,7 +568,7 @@
 
           <div
             class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-            <p><span class="published-date">19.6.2018 / </span> <a type="media_type" href="https://hackernoon.com">Hackernoon.com</a>
+            <p><span class="published-date">19.6.2018 / </span> <a type="media_type" href="https://hackernoon.com/icos-bullshitting-on-steroids-7b8ce32bce96">Hackernoon.com</a>
             </p>
             <h3>ICOs: bullshitting on steroids</h3>
             <p class="perex">Chamath Palihapitiya from Social Capital is, for me at least, the most
