Nový článek - Blockchain

--- a/blockchain.topmonks.com/src/html/index.html
+++ b/blockchain.topmonks.com/src/html/index.html
@@ -302,6 +302,33 @@
         </div>
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+          <p><span class="published-date">12.10.2019 / </span> <a type="media_type"
+                                                                  href="https://finmag.penize.cz/ekonomika/410203-az-se-budou-hroutit-ekonomiky-musi-mit-hlavouni-cestu-ven-rika-rosenberg">Finmag.com</a>
+          </p>
+          <h3>Až se budou hroutit ekonomiky, musí mít hlavouni cestu ven, říká Rosenberg</h3>
+          <p class="perex">V&nbsp;pražské Paralelní Polis se konal další ročník Hacker Congressu,
+            tentokrát s&nbsp;podtitulem Opt-out, tedy „vystoupení ze systému“. Byli jsme
+            jeho mediálním partnerem a přinášíme interview s&nbsp;jedním
+            z&nbsp;nejzajímavějších řečníků, Paulem Rosenbergem.</p>
+          <hr>
+          <div class="mdc-layout-grid__inner">
+            <div
+              class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
+                   height="32">
+              <span class="name">Josef Tětek</span>
+            </div>
+            <div
+              class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+              <a href="https://finmag.penize.cz/ekonomika/410203-az-se-budou-hroutit-ekonomiky-musi-mit-hlavouni-cestu-ven-rika-rosenberg">Show
+                article</a>
+            </div>
+          </div>
+        </div>
+
+
+        <div
+          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">16.09.2019 / </span> <a type="media_type"
                                                                   href="https://hackernoon.com/interview-with-rene-reinsberg-founder-of-celo-lv2zi3un5">Hackernoon.com</a>
           </p>
@@ -420,31 +447,32 @@
           </div>
         </div>
 
-        <div
-          class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-          <p><span class="published-date">12.08.2019 / </span> <a type="media_type"
-                                                                  href="https://hackernoon.com/libra-the-ideavirus-9u653vi0">Hackernoon.com</a>
-          </p>
-          <h3>Libra: The Idea-virus</h3>
-          <p class="perex">The lid on the fabled "Facebook coin" project has been finally lifted in the middle of
-            June. Libra, a name evoking an ancient unit of weight, scales of justice and a somewhat clever jab at
-            Winklevoss' Gemini, has already been written about extensively.</p>
-          <hr>
-          <div class="mdc-layout-grid__inner">
-            <div
-              class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-              <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
-                   height="32">
-              <span class="name">Josef Tětek</span>
-            </div>
-            <div
-              class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
-              <a href="https://hackernoon.com/libra-the-ideavirus-9u653vi0">Show article</a>
-            </div>
-          </div>
-        </div>
+
         <div id="more" class="more mdc-layout-grid__cell mdc-layout-grid__cell--span-12 mdc-layout-grid__inner">
 
+          <div
+            class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+            <p><span class="published-date">12.08.2019 / </span> <a type="media_type"
+                                                                    href="https://hackernoon.com/libra-the-ideavirus-9u653vi0">Hackernoon.com</a>
+            </p>
+            <h3>Libra: The Idea-virus</h3>
+            <p class="perex">The lid on the fabled "Facebook coin" project has been finally lifted in the middle of
+              June. Libra, a name evoking an ancient unit of weight, scales of justice and a somewhat clever jab at
+              Winklevoss' Gemini, has already been written about extensively.</p>
+            <hr>
+            <div class="mdc-layout-grid__inner">
+              <div
+                class="personal__id mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+                <img class="person__photo" src="/images/team/josef.jpg" alt="[photo] Josef Tětek" width="32"
+                     height="32">
+                <span class="name">Josef Tětek</span>
+              </div>
+              <div
+                class="article-link mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
+                <a href="https://hackernoon.com/libra-the-ideavirus-9u653vi0">Show article</a>
+              </div>
+            </div>
+          </div>
         <div
           class="blog_box mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-4-tablet mdc-layout-grid__cell--span-6-desktop">
           <p><span class="published-date">27.6.2019 / </span> <a type="media_type" href="https://www.alza.cz/libra-facebook">Penize.cz</a>
